--- a/.travis.yml
+++ b/.travis.yml
@@ -90,12 +90,12 @@ matrix:
 
     # PHP 7.0 - POSTGRESQL 9.2
     - php: 7.0
-      env: PHPUNIT=1 DB=postgresql DB_VERSION=9.2 DATASOURCES_TEST_DRIVER=Postgres DATASOURCES_TEST_USERNAME=postgres DATASOURCES_TEST_PORT=5432
+      env: PHPUNIT=1 DB=postgresql DB_VERSION=9.2 DATASOURCES_TEST_DRIVER=Postgres DATASOURCES_TEST_USERNAME=postgres DATASOURCES_TEST_PORT=5432 DATASOURCES_TEST_ENCODING=utf8
       addons: *php7_addon
 
     # PHP 7.0 - POSTGRESQL 9.4
     - php: 7.0
-      env: PHPUNIT=1 DB=postgresql DB_VERSION=9.4 DATASOURCES_TEST_DRIVER=Postgres DATASOURCES_TEST_USERNAME=postgres DATASOURCES_TEST_PORT=5432
+      env: PHPUNIT=1 DB=postgresql DB_VERSION=9.4 DATASOURCES_TEST_DRIVER=Postgres DATASOURCES_TEST_USERNAME=postgres DATASOURCES_TEST_PORT=5432 DATASOURCES_TEST_ENCODING=utf8
       addons:
         postgresql: "9.4"
         apt:
